package org.example.padroescomportamentais.observer;

public interface Observer {
    void update(Subject subject);
}
